--- a/src/index.scss
+++ b/src/index.scss
@@ -14,7 +14,7 @@ body {
 
 input, textarea {
   outline: none;
-  cursor: pointer;
+  cursor: text;
   border: none;
   border-radius: 8px;
   background: #FFF1FE;
@@ -31,8 +31,8 @@ input, textarea {
 }
 
 .link {
-  text-decoration: underline;
   color: $black2;
+  text-decoration: none;
 }
 
 .hidden {
