--- a/src/sections/Contact.module.scss
+++ b/src/sections/Contact.module.scss
@@ -21,7 +21,7 @@
         gap: 32px;
       }
 
-    h1 {
+    h2 {
       grid-column: 1 / 5;
       @media (max-width: 1080px) {
         text-align: left;
@@ -45,6 +45,7 @@
       @media (max-width: 1080px) {
         width: 98%;
         gap: 8px;
+        margin-left: 8px;
         margin-bottom: 24px;
         flex-direction: column;
         align-items: flex-start;
