--- a/src/sections/HomeHero.module.scss
+++ b/src/sections/HomeHero.module.scss
@@ -20,6 +20,7 @@
   }
   h1 {
     text-align: center;
+    font-weight: 1000;
     grid-column: 2 / 12;
     @media (max-width: 1080px) {
       text-align: left;
